--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="style.css"/>
         <body>
             <h1>Demo git</h1>
             <a href="Sobre.html">Sobre</a>
